--- a/styles/app.css
+++ b/styles/app.css
@@ -2,6 +2,34 @@ body {
     padding: 20px;
 }
 
+/*----------------------------------------------------
+Forms
+-----------------------------------------------------*/
+label {
+    font-weight: bold;
+    display: block;
+    font-size: 1.4rem;
+}
+
+input[type='radio'], input[type='checkbox'] {
+    margin-right: 0;
+    /* Next two lines prevent misalignment with text */
+    vertical-align: middle;
+    margin-top: -3px;
+}
+
+fieldset {
+    margin-bottom: 20px;
+}
+
+input[type=text] {
+    display: block;
+    font-family: Consolas, Courier, monospace;
+}
+
+/*----------------------------------------------------
+Books
+-----------------------------------------------------*/
 ul.books {
     list-style-type: none;
     padding: 0;
